bug: h2 text align fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -220,8 +220,8 @@ hr {
 }
 
 .projects-title {
-  width: 10%;
-  margin: auto;
+  width: 100%;
+  text-align: center;
   padding: 50px 0;
 }
 
@@ -264,8 +264,8 @@ hr {
 }
 
 .contact-title {
-  width: 9.5%;
-  margin: auto;
+  width: 100%;
+  text-align: center;
   padding: 50px 0;
   color: #fff;
 }
